[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scenes/Worldbuilding/Green_walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Skelett.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Berg/Berg.gd" type="Script" id=4]
[ext_resource path="res://Pics/Mapbuilding/berg/bakgrund/berg_background_berg.png" type="Texture" id=5]
[ext_resource path="res://Pics/Mapbuilding/berg/berg_near_snow.png" type="Texture" id=6]
[ext_resource path="res://Pics/Mapbuilding/HUB-värld/grass.png" type="Texture" id=7]
[ext_resource path="res://Pics/Mapbuilding/berg/bakgrund/berg_background_himmel1.png" type="Texture" id=8]
[ext_resource path="res://Pics/Mapbuilding/berg/bakgrund/berg_bak.png" type="Texture" id=9]
[ext_resource path="res://Pics/Mapbuilding/berg/bakgrund/berg_mitt.png" type="Texture" id=10]
[ext_resource path="res://Pics/Mapbuilding/berg/berg_near_2.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Worldbuilding/Tree.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Worldbuilding/Tree2.tscn" type="PackedScene" id=13]
[ext_resource path="res://Pics/Mapbuilding/HUB-värld/grass_spritesheet.png" type="Texture" id=14]
[ext_resource path="res://Pics/Mapbuilding/berg/skidor.png" type="Texture" id=15]
[ext_resource path="res://Pics/Mapbuilding/berg/snö.png" type="Texture" id=16]
[ext_resource path="res://Pics/Mapbuilding/Stad/tilemaps/street_tilemap.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Stad/Bussskylt.tscn" type="PackedScene" id=18]
[ext_resource path="res://Pics/Mapbuilding/Generellt/fågel.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Fågel.gd" type="Script" id=20]
[ext_resource path="res://Pics/Mapbuilding/berg/lås.png" type="Texture" id=21]

[sub_resource type="TileSet" id=75]
0/name = "gräs.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "street_tilemap.png 1"
1/texture = ExtResource( 17 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 256, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "street_tilemap.png 2"
2/texture = ExtResource( 17 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 128, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "street_tilemap.png 3"
3/texture = ExtResource( 17 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="TileSet" id=84]
0/name = "street_tilemap.png 0"
0/texture = ExtResource( 17 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "street_tilemap.png 1"
1/texture = ExtResource( 17 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 128, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "street_tilemap.png 2"
2/texture = ExtResource( 17 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 96, 128, 160 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "street_tilemap.png 3"
3/texture = ExtResource( 17 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 256, 128, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 256, 0, 0, 256, 0, 256, 256, 192, 256, 192, 64, 64, 64, 64, 256, 64, 256 )

[sub_resource type="TileSet" id=77]
3/name = "gräs_spritesheet.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1152, 128, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 29 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "gräs_spritesheet.png 4"
4/texture = ExtResource( 14 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1152, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
7/name = "gräs_spritesheet.png 7"
7/texture = ExtResource( 14 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 1664, 0, 256, 256 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 24 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 128, 128, 16, 128, 16, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 128, 0, 128, 128, 96, 128, 48, 96, 16, 32, 16, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 0, 112, 0, 112, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 96, 0, 0, 112, 0, 112, 32, 80, 96, 32, 128, 32, 128, 0, 128, 0, 112 )

[sub_resource type="TileSet" id=78]
0/name = "gräs_spritesheet.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1024, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 25 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "gräs_spritesheet.png 1"
1/texture = ExtResource( 14 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1024, 128, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 26 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "gräs_spritesheet.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 1280, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 27 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "gräs_spritesheet.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1280, 128, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 28 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "gräs.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "gräs.png 5"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="RectangleShape2D" id=74]
extents = Vector2( 60.3005, 66.0372 )

[sub_resource type="RectangleShape2D" id=82]
extents = Vector2( 39.5, 73.625 )

[sub_resource type="RectangleShape2D" id=83]
extents = Vector2( 153, 577.5 )

[sub_resource type="RectangleShape2D" id=76]
extents = Vector2( 4117, 208.5 )

[sub_resource type="Curve2D" id=85]
_data = {
"points": PoolVector2Array( 246.942, -179.594, -246.942, 179.594, 2537, -905, 345.718, -6.73477, -345.718, 6.73477, 1216, -615, 293.997, -40.9813, -293.997, 40.9813, 735, -841, 187.089, -24.9452, -187.089, 24.9452, 332, -582, 188.775, 28.3162, -188.775, -28.3162, -257, -931, 606.013, 271.223, -606.013, -271.223, -1570, -731, 0, 0, 0, 0, -1049, -1285, 0, 0, 0, 0, 1791, -1367, 0, 0, 0, 0, 2324, -1285, 0, 0, 0, 0, 2537, -905 )
}

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=90]
animations = [ {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="Berg" type="Node2D"]
script = ExtResource( 4 )

[node name="grass" type="TileMap" parent="."]
modulate = Color( 0.584314, 0.670588, 0.964706, 1 )
tile_set = SubResource( 75 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 65517, 0, 0, 65518, 0, 0, 65519, 0, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 131053, 0, 0, 131054, 0, 0, 131055, 0, 0, 131056, 0, 0, 131057, 0, 0, 131058, 0, 0, 131059, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 196589, 0, 0, 196590, 0, 0, 196591, 0, 0, 196592, 0, 0, 196593, 0, 0, 196594, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 131108, 0, 0, 131109, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 131113, 0, 0, 262125, 0, 0, 262126, 0, 0, 262127, 0, 0, 262128, 0, 0, 262129, 0, 0, 262130, 0, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 327661, 0, 0, 327662, 0, 0, 327663, 0, 0, 327664, 0, 0, 327665, 0, 0, 327666, 0, 0, 327667, 0, 0, 327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 262183, 0, 0, 262184, 0, 0, 262185, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0, 786471, 0, 0, 786472, 0, 0, 786473, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 852007, 0, 0, 852008, 0, 0, 852009, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 917543, 0, 0, 917544, 0, 0, 917545, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983075, 0, 0, 983076, 0, 0, 983077, 0, 0, 983078, 0, 0, 983079, 0, 0, 983080, 0, 0, 983081, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1179687, 0, 0, 1179688, 0, 0, 1179689, 0, 0 )

[node name="väg" type="TileMap" parent="."]
modulate = Color( 0.584314, 0.670588, 0.964706, 1 )
tile_set = SubResource( 84 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0 )

[node name="hedgewalls" type="TileMap" parent="."]
position = Vector2( 0, 30 )
tile_set = SubResource( 77 )
cell_size = Vector2( 128, 128 )
show_collision = true
collision_layer = 2
format = 1
tile_data = PoolIntArray( 786460, 4, 0, 786461, 4, 0, 786462, 4, 0, 786463, 4, 0, 786464, 4, 0, 786465, 4, 0, 786466, 4, 0, 786467, 4, 0, 786468, 4, 0, 786469, 4, 0, 786470, 4, 0, 786471, 4, 0, 786472, 4, 0, 786473, 4, 0, 851996, 3, 0, 851997, 3, 0, 851998, 3, 0, 851999, 3, 0, 852000, 3, 0, 852001, 3, 0, 852002, 3, 0, 852003, 3, 0, 852004, 3, 0, 852005, 3, 0, 852006, 3, 0, 852007, 3, 0, 852008, 3, 0, 852009, 3, 0 )

[node name="hedgeend" type="TileMap" parent="hedgewalls"]
tile_set = SubResource( 78 )
cell_size = Vector2( 128, 128 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 786459, 0, 0, 851995, 1, 0 )

[node name="Tree3" parent="." instance=ExtResource( 13 )]
position = Vector2( 3775, -118 )
scale = Vector2( 0.8, 0.8 )

[node name="Bergsfot" type="StaticBody2D" parent="."]
position = Vector2( 4711, 89 )

[node name="berg1" type="Sprite" parent="Bergsfot"]
position = Vector2( -58, -120 )
texture = ExtResource( 11 )
normal_map = ExtResource( 5 )

[node name="col_berg1" type="CollisionPolygon2D" parent="Bergsfot"]
visible = false
polygon = PoolVector2Array( -990, 30, -988, 23, -964, 4, -919, -21, -888, -190, -884, -276, -862, -335, -867, -349, -804, -424, -738, -390, -680, -451, -695, -605, -473, -787, -433, -906, -309, -709, -312, -594, -163, -325, -89, -316, -56, -412, -22, -579, 70, -552, 133, -637, 288, -605, 470, -830, 527, -802, 614, -574, 889, -451, 934, -367, 943, 25, 790, 46, 539, 82, 495, 75, 487, 59, 462, 69, 378, 32, 302, 20, 264, 41, 209, 34, 165, 53, 181, 69, 188, 105, 175, 109, 161, 100, 144, 102, 128, 94, 88, 98, 80, 119, 48, 131, 33, 121, 29, 112, -23, 111, -30, 119, -217, 112, -328, 30, -391, 29, -402, 40, -433, 32, -474, 49, -463, 61, -485, 85, -630, 63, -625, 83, -679, 77, -729, 52, -747, 30, -773, 32, -777, 49, -791, 61, -819, 59, -843, 50, -855, 56, -897, 53, -903, 48, -905, 37, -923, 36, -964, 29 )

[node name="ColorRect" type="ColorRect" parent="Bergsfot"]
margin_left = -6056.0
margin_top = -423.0
margin_right = -5073.0
margin_bottom = 872.0
rect_rotation = 34.8374

[node name="Snö2" type="Sprite" parent="Bergsfot"]
position = Vector2( -5751, 226 )
rotation = -1.95824
texture = ExtResource( 16 )

[node name="Snö3" type="Sprite" parent="Bergsfot"]
position = Vector2( -5954, 422 )
rotation = -2.66845
texture = ExtResource( 16 )

[node name="berg2" type="Sprite" parent="Bergsfot"]
position = Vector2( -5410, -81 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bergsfot"]
position = Vector2( -5376, -257 )
polygon = PoolVector2Array( -613, 376, -576, 361, -551, 366, -457, 322, -387, 317, -366, 337, -311, 322, -260, 343, -279, 399, -187, 387, -149, 405, 136, 409, 242, 334, 363, 341, 405, 390, 817, 371, 891, 315, 837, 273, 805, 109, -1041, 109, -1061, 325, -797, 363 )

[node name="Snö" type="Sprite" parent="Bergsfot"]
position = Vector2( -5386, 328 )
rotation = -2.96187
texture = ExtResource( 16 )

[node name="Skidor" type="Sprite" parent="Bergsfot"]
position = Vector2( -5350, 98 )
texture = ExtResource( 15 )

[node name="Lock" type="Sprite" parent="Bergsfot"]
position = Vector2( 6, 29 )
texture = ExtResource( 21 )

[node name="YSort" type="YSort" parent="."]

[node name="Skelett" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 560, 321 )
scale = Vector2( 0.5, 0.5 )

[node name="Tree" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 5140, 152 )

[node name="Tree2" parent="YSort" instance=ExtResource( 13 )]
position = Vector2( 2348, 152 )

[node name="hedge" parent="." instance=ExtResource( 1 )]

[node name="gate_Main" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="gate_Main"]
position = Vector2( 669.877, 1558.06 )
scale = Vector2( 10.6653, 9.88742 )
shape = SubResource( 74 )

[node name="gate_Grotta" type="Area2D" parent="."]
position = Vector2( 4720, 90 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="gate_Grotta"]
position = Vector2( -3, -9.625 )
shape = SubResource( 82 )

[node name="gate_Stad" type="Area2D" parent="."]
position = Vector2( -1544, 260 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="gate_Stad"]
position = Vector2( -10, -247.5 )
shape = SubResource( 83 )

[node name="himmel" type="StaticBody2D" parent="."]
position = Vector2( -67, -212 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="himmel"]
visible = false
position = Vector2( 1750, 19 )
shape = SubResource( 76 )

[node name="Bakgrund" type="ParallaxBackground" parent="."]

[node name="Himmel" type="ParallaxLayer" parent="Bakgrund"]
position = Vector2( -67, -212 )
motion_mirroring = Vector2( 3570, 0 )

[node name="himmel1" type="Sprite" parent="Bakgrund/Himmel"]
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 3570, 2000 )

[node name="berg_bak" type="ParallaxLayer" parent="Bakgrund"]
position = Vector2( -354, -182 )
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 3570, 0 )

[node name="himmel3" type="Sprite" parent="Bakgrund/berg_bak"]
position = Vector2( 100, -65 )
texture = ExtResource( 9 )

[node name="Berg_mitt" type="ParallaxLayer" parent="Bakgrund"]
position = Vector2( 551, -168 )
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 3570, 0 )

[node name="himmel2" type="Sprite" parent="Bakgrund/Berg_mitt"]
position = Vector2( -130, -58 )
texture = ExtResource( 10 )

[node name="Berg_fram" type="ParallaxLayer" parent="Bakgrund"]
position = Vector2( -882, -188 )
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 3570, 0 )

[node name="berg" type="Sprite" parent="Bakgrund/Berg_fram"]
texture = ExtResource( 5 )

[node name="Positioner" type="Node2D" parent="."]

[node name="berg_Main" type="Position2D" parent="Positioner"]
position = Vector2( 626, 634 )

[node name="berg_Grotta" type="Position2D" parent="Positioner"]
position = Vector2( 4719, 86 )

[node name="berg_Stad" type="Position2D" parent="Positioner"]
position = Vector2( -260, 195 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 1621, 410 )
current = true
limit_left = -1670
limit_top = -1000
limit_right = 5360
limit_bottom = 2500
editor_draw_limits = true

[node name="Bussskylt" parent="." instance=ExtResource( 18 )]
modulate = Color( 0.560784, 0.568627, 0.682353, 1 )
position = Vector2( 827, -90 )

[node name="Fågel_path" type="Path2D" parent="."]
position = Vector2( 2, -1 )
curve = SubResource( 85 )

[node name="Fågel" type="PathFollow2D" parent="Fågel_path"]
position = Vector2( 2537, -905 )
rotation = 2.51781
script = ExtResource( 20 )

[node name="Fågel" type="AnimatedSprite" parent="Fågel_path/Fågel"]
frames = SubResource( 90 )
frame = 2
playing = true

[connection signal="gate_detected" from="YSort/Skelett" to="." method="_on_Skelett_gate_detected"]
